--- a/resources/docker/Dockerfile
+++ b/resources/docker/Dockerfile
@@ -1,10 +1,12 @@
-FROM ubuntu:18.04
+FROM nginx:latest
 
 MAINTAINER DSM
 
+# install apt-utils so the rest of the install goes more smoothly
 RUN apt-get update \
     && apt-get install -y apt-utils
 
+# install packages
 RUN apt-get update \
     && apt-get install -y \
         git unzip \
@@ -23,16 +25,16 @@ RUN apt-get update \
         libghc-pandoc-dev \
         fonts-noto \
         context \
+        wget \
     && apt-get autoremove -y
 
+# install nodejs
 RUN curl -sL https://deb.nodesource.com/setup_10.x -o nodesource_setup.sh \
     && chmod +x nodesource_setup.sh \
-    && ./nodesource_setup.sh
+    && ./nodesource_setup.sh \
+    && apt-get install -y nodejs
 
-RUN apt-get install -y nodejs
-
-RUN pip3 install -U Flask
-
+# download images for OBS
 RUN mkdir -p /opt/obs/images \
     && mkdir -p /opt/obs/png \
     && mkdir -p /opt/obs/jpg \
@@ -43,3 +45,14 @@ RUN mkdir -p /opt/obs/images \
     && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo1200w.png -o /opt/obs/png/uWOBSverticallogo1200w.png \
     && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo600w.png -o /opt/obs/png/uWOBSverticallogo600w.png \
     && unzip /opt/obs/jpg/obs-images-360px.zip -d /opt/obs/jpg
+
+# install the obs-pdf app
+RUN cd /opt && git clone --single-branch -b develop https://github.com/unfoldingWord-dev/obs-pdf.git \
+    && cd /opt/obs-pdf \
+    && python3 -m venv venv \
+    && source venv/bin/activate \
+    && pip install --upgrade -r prerequisites.txt
+    && pip install -r requirements.txt
+
+# configure nginx
+#RUN ufw allow 'Nginx Full'
