Setting up entrypoint

--- a/config/obs-pdf.conf
+++ b/config/obs-pdf.conf
@@ -1,9 +1,9 @@
 server {
-    listen 80;
-    server_name server_domain_or_IP;
+    listen 80 default_server;
+    server_name _;
 
-    access_log /var/log/nginx/obs-pdf.access.log  main;
-    error_log /var/log/nginx/obs-pdf.error.log  warn;
+    access_log /var/log/nginx/obs-pdf.access.log main;
+    error_log /var/log/nginx/obs-pdf.error.log warn;
 
     location / {
         include uwsgi_params;
