Increase nginx timeout

--- a/resources/docker/nginx.conf
+++ b/resources/docker/nginx.conf
@@ -12,6 +12,6 @@ server {
         alias /app/static;
     }
     location /output {
-        alias /app/obs-pdf/output
+        alias /app/obs-pdf/output;
     }
 }
