Split the Docker container into 2 parts

--- a/resources/docker-obs-base/Dockerfile
+++ b/resources/docker-obs-base/Dockerfile
@@ -2,24 +2,10 @@ FROM tiangolo/uwsgi-nginx-flask:python3.6
 
 MAINTAINER DSM
 
-# Which uWSGI .ini file should be used, to make it customizable
-ENV UWSGI_INI /app/obs-pdf/public/uwsgi.ini
-
-# URL under which static (not modified by Python) files will be requested
-# They will be served by Nginx directly, without being handled by uWSGI
-ENV STATIC_URL /output
-# Absolute path in where the static files wil be
-ENV STATIC_PATH /app/obs-pdf/output
-# Timeout in seconds for processing Flask requests
-ENV NGINX_TIMEOUT 300
-
-# install apt-utils so the rest of the install goes more smoothly
+# install packages, nodejs, and the OBS images
 RUN apt-get update \
     && apt-get dist-upgrade -y \
-    && apt-get install -y apt-utils
-
-# install packages
-RUN apt-get update \
+    && apt-get install -y apt-utils \
     && apt-get install -y \
         git unzip \
         bzip2 \
@@ -36,16 +22,11 @@ RUN apt-get update \
         context \
         wget \
         nano \
-    && apt-get autoremove -y
-
-# install nodejs
-RUN curl -sL https://deb.nodesource.com/setup_10.x -o nodesource_setup.sh \
+    && curl -sL https://deb.nodesource.com/setup_10.x -o nodesource_setup.sh \
     && chmod +x nodesource_setup.sh \
     && ./nodesource_setup.sh \
-    && apt-get install -y nodejs
-
-# download images for OBS
-RUN mkdir -p /opt/obs/images \
+    && apt-get install -y nodejs \
+    && mkdir -p /opt/obs/images \
     && mkdir -p /opt/obs/png \
     && mkdir -p /opt/obs/jpg \
     && curl -sL https://cdn.unfoldingword.org/obs/jpg/obs-images-360px.zip -o /opt/obs/jpg/obs-images-360px.zip \
@@ -55,14 +36,3 @@ RUN mkdir -p /opt/obs/images \
     && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo1200w.png -o /opt/obs/png/uWOBSverticallogo1200w.png \
     && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo600w.png -o /opt/obs/png/uWOBSverticallogo600w.png \
     && unzip /opt/obs/jpg/obs-images-360px.zip -d /opt/obs/jpg
-
-# install the obs-pdf app
-RUN cd /app && git clone --single-branch -b master https://github.com/unfoldingWord-dev/obs-pdf.git \
-    && cd /app/obs-pdf \
-    && git pull \
-    && pip install --upgrade pip \
-    && pip install --upgrade -r prerequisites.txt \
-    && pip install -r requirements.txt
-
-COPY start.sh /start.sh
-COPY entrypoint.sh /entrypoint.sh
