--- a/resources/docker-obs-base/Dockerfile
+++ b/resources/docker-obs-base/Dockerfile
@@ -1,6 +1,4 @@
-FROM tiangolo/uwsgi-nginx-flask:python3.6
-
-MAINTAINER DSM
+FROM tiangolo/uwsgi-nginx-flask:python3.7
 
 # install packages, nodejs, and the OBS images
 RUN apt-get update \
@@ -29,10 +27,12 @@ RUN apt-get update \
     && mkdir -p /opt/obs/images \
     && mkdir -p /opt/obs/png \
     && mkdir -p /opt/obs/jpg \
-    && curl -sL https://cdn.unfoldingword.org/obs/jpg/obs-images-360px.zip -o /opt/obs/jpg/obs-images-360px.zip \
+    && curl -sL https://cdn.door43.org/obs/jpg/obs-images-360px.zip -o /opt/obs/jpg/obs-images-360px.zip \
     && curl -sL https://unfoldingword.org/assets/img/uW-Level-1-128px.png -o /opt/obs/png/uW-Level-1-128px.png \
     && curl -sL https://unfoldingword.org/assets/img/uW-Level-2-128px.png -o /opt/obs/png/uW-Level-2-128px.png \
     && curl -sL https://unfoldingword.org/assets/img/uW-Level-3-128px.png -o /opt/obs/png/uW-Level-3-128px.png \
-    && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo1200w.png -o /opt/obs/png/uWOBSverticallogo1200w.png \
-    && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo600w.png -o /opt/obs/png/uWOBSverticallogo600w.png \
+    && curl -sL https://cdn.door43.org/obs/png/uW_OBS_Logo.png -o /opt/obs/png/uW_OBS_Logo.png \
     && unzip /opt/obs/jpg/obs-images-360px.zip -d /opt/obs/jpg
+
+    # && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo1200w.png -o /opt/obs/png/uWOBSverticallogo1200w.png \
+    # && curl -sL https://cdn.door43.org/obs/jpg/uWOBSverticallogo600w.png -o /opt/obs/png/uWOBSverticallogo600w.png \
