Add badges in ReadMe

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,8 @@ install:
 # Run the tests first
 #  and if they succeed, make the docker image(s)
 #   (and check that both succeed)
-# script:
+script:
+  - ls
   # - mypy enqueue/
   # - PYTHONPATH="enqueue/" coverage run -m unittest discover -s tests/
 
