--- a/resources/docker-app/Dockerfile-debug
+++ b/resources/docker-app/Dockerfile-debug
@@ -1,15 +1,15 @@
 FROM unfoldingword/obs-base:latest
 
 # Which uWSGI .ini file should be used, to make it customizable
-ENV UWSGI_INI /app/obs-pdf/public/uwsgi.ini
+#ENV UWSGI_INI /app/obs-pdf/public/uwsgi.ini
 
 # URL under which static (not modified by Python) files will be requested
 # They will be served by Nginx directly, without being handled by uWSGI
-ENV STATIC_URL /output
+#ENV STATIC_URL /output
 # Absolute path in where the static files wil be
-ENV STATIC_PATH /app/obs-pdf/output
+#ENV STATIC_PATH /app/obs-pdf/output
 # Timeout in seconds for processing Flask requests
-ENV NGINX_TIMEOUT 300
+#ENV NGINX_TIMEOUT 300
 
 COPY . /app/obs-pdf/
 
